# axec

./: Cargo.toml  PLAN.md  README.md  README.zh-CN.md  README.zh-TW.md
.github/workflows/: ci.yml  release.yml
docs/: PLAN.md  README.zh-CN.md  README.zh-TW.md  guide.md  guide.zh-CN.md  guide.zh-TW.md
docs/templates/: guide.md.tpl  readme.md.tpl
locales/: app.en.yml  app.zh-CN.yml  app.zh-TW.yml  docs.en.yml  docs.zh-CN.yml  docs.zh-TW.yml  en.yml  zh-CN.yml
skills/: SKILLS.md
skills/axec-attach/: SKILL.md
skills/axec-cat/: SKILL.md
skills/axec-clean/: SKILL.md
skills/axec-input/: SKILL.md
skills/axec-kill/: SKILL.md
skills/axec-list/: SKILL.md
skills/axec-output/: SKILL.md
skills/axec-run/: SKILL.md
skills/axrepl-clean/: SKILL.md
skills/axrepl-input/: SKILL.md
skills/axrepl-kill/: SKILL.md
skills/axrepl-list/: SKILL.md
skills/axrepl-run/: SKILL.md
src/: cli.rs  config.rs  error.rs  i18n.rs  lib.rs  main.rs  paths.rs  protocol.rs  repl.rs  terminal.rs  transport.rs
src/client/: commands.rs  connection.rs  mod.rs
src/daemon/: idle_monitor.rs  mod.rs  output_buffer.rs  server.rs  session.rs  session_manager.rs
src/platform/: mod.rs  unix.rs  windows.rs
