[package]
name = "axec"
version = "0.1.0"
edition = "2024"
description = "Daemon-backed CLI for persistent async command and REPL sessions"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = "4.5"
crossterm = "0.29"
dirs = "6.0"
rust-i18n = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
tokio = { version = "1.45", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.17", features = ["serde", "v4"] }
regex = "1.12"
rust-i18n-support = "3.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["signal", "process", "term"] }
portable-pty = "0.9"

[target.'cfg(windows)'.dependencies]
conpty = "0.7"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_JobObjects", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3.20"
